# deployrender

./: .env  manage.py  pyproject.toml  requirements.txt
deployrender/: asgi.py  settings.py  urls.py  wsgi.py
render/: views.py
render/templates/render/: index.html
