[tool.poetry]
name = "deployrender"
version = "0.1.0"
description = ""
authors = ["Ralph <ralphcylex@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "3.5.1"
Brotli = "1.0.9"
CacheControl = "0.12.11"
cachy = "0.3.0"
certifi = "2021.10.8"
charset-normalizer = "2.0.12"
cleo = "0.8.1"
clikit = "0.6.2"
colorama = "0.4.4"
commonmark = "0.9.1"
crashtest = "0.3.1"
distlib = "0.3.4"
dj-database-url = "0.5.0"
Django = "4.0.4"
filelock = "3.6.0"
gunicorn = "20.1.0"
html5lib = "1.1"
idna = "3.3"
importlib-metadata = "4.11.3"
keyring = "23.5.0"
lockfile = "0.12.2"
msgpack = "1.0.3"
packaging = "20.9"
pastel = "0.2.1"
pexpect = "4.8.0"
pipenv-poetry-migrate = "0.2.0"
pkginfo = "1.8.2"
platformdirs = "2.5.2"
poetry = "1.1.13"
poetry-core = "1.0.8"
psycopg2-binary = "2.9.3"
ptyprocess = "0.7.0"
Pygments = "2.12.0"
pylev = "1.4.0"
pyparsing = "3.0.8"
requests = "2.27.1"
requests-toolbelt = "0.9.1"
rich = "9.13.0"
shellingham = "1.4.0"
six = "1.16.0"
sqlparse = "0.4.2"
tomlkit = "0.10.2"
typing-extensions = "3.10.0.2"
urllib3 = "1.26.9"
virtualenv = "20.14.1"
webencodings = "0.5.1"
whitenoise = "6.0.0"
zipp = "3.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
